--- a/file.env
+++ b/file.env
@@ -5,11 +5,11 @@ STRIPE_SECRET_KEY='sk_test_51QBFzsCvtN3RXJUE14p0rU6eAtmchfjOSPoeWrzU8yh2vQQJLMfm
 
 
 
-BACKEND_DOMAIN=https://jeffiyonawan.com/
+BACKEND_DOMAIN=http://jeffiyonawan.com/
 
-PAYMENT_SUCCESS_URL=https://jeffiyonawan.com/success/
+PAYMENT_SUCCESS_URL=http://jeffiyonawan.com/success/
 
-PAYMENT_CANCEL_URL=https://jeffiyonawan.com/cancel/
+PAYMENT_CANCEL_URL=http://jeffiyonawan.com/cancel/
 
 
 PAYSTACK_SECRET_KEY='sk_test_1a9811f96f0157bd5d4bda1a3b298810de958a73'
