--- a/file.env
+++ b/file.env
@@ -5,7 +5,7 @@ STRIPE_SECRET_KEY='sk_test_51QBFzsCvtN3RXJUE14p0rU6eAtmchfjOSPoeWrzU8yh2vQQJLMfm
 
 
 
-BACKEND_DOMAIN=http://jeffiyonawan.com/
+BACKEND_DOMAIN=http://jeffiyonawan.com
 
 PAYMENT_SUCCESS_URL=http://jeffiyonawan.com/success/
 
