--- a/file.env
+++ b/file.env
@@ -23,5 +23,8 @@ EMAIL_HOST_PASSWORD='9DcKXg7HdZiJ'
 DB_NAME=railway
 DB_USER=postgres
 DB_PASSWORD=fWqFGZURSmYnhAWXIriiRuMQPIGfEsTz
-DB_HOST=autorack.proxy.rlwy.net
-DB_PORT=40388
+DB_HOST=postgres.railway.internal
+DB_PORT=5432
+
+
+
